plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id "org.beryx.jlink" version "3.1.3"

}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation libs.guava
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'game.App'
    mainModule = "game"
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
jlink {

    launcher {
        name = 'Game'
        jvmArgs = [
            // 必要ならここへ
            '--enable-preview'
        ]
    }

    jpackage {
        skipInstaller = true
        imageOptions = [
            '--win-console'
        ]
    }
}